[tool.poetry]
name = "pixgen-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
replicate = "^0.26.0"
streamlit = "^1.35.0"
requests = "^2.32.3"
streamlit-image-select = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
